fix: add z-index to results to float above other elements

--- a/src/autocomplete/autocomplete.module.css
+++ b/src/autocomplete/autocomplete.module.css
@@ -48,6 +48,7 @@
   background-color: #fff;
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 10px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px;
+  z-index: 10;
 }
 
 .results-empty {
